@@ -35,10 +35,6 @@ END
     command.actually_run_tests = true
   end
   
-  opts.on('-m','--run-in-memory',"Instead of writing intermediate files to disk, uses memory. Requires a lot of memory.") do
-    command.run_in_memory = true
-  end
-
   opts.on('--sloppy-tests',"The generated tests treat blanks and zeros as equivalent and only require numbers to be approximately the same. This is the default.") do
     command.sloppy_tests = true
   end
