@@ -8,5 +8,4 @@ command.actually_compile_code = true
 command.actually_run_tests = true
 command.named_references_that_can_be_set_at_runtime = :where_possible # ['A']
 command.named_references_to_keep = :all # ['Total']
-command.run_in_memory = true
 command.go!
