@@ -11,5 +11,4 @@ command.named_references_that_can_be_set_at_runtime = :where_possible
 command.cells_that_can_be_set_at_runtime = :named_references_only
 command.actually_compile_code = true
 command.actually_run_tests = true
-command.run_in_memory = true
 command.go!
