@@ -6,5 +6,4 @@ command.output_directory = this_directory
 command.output_name = 'stringexample'
 command.actually_compile_code = true
 command.actually_run_tests = true
-command.run_in_memory = true
 command.go!
