@@ -14,7 +14,6 @@ profile =  RubyProf.profile do
   command.cells_that_can_be_set_at_runtime = :named_references_only
   command.actually_compile_code = true
   command.actually_run_tests = true
-  command.run_in_memory = true
   command.go!
 end
 
