@@ -17,7 +17,6 @@ describe ExcelToC do
     #  'Referencing' => ['A4']
     #}
     command.actually_compile_code = true
-    command.run_in_memory = true
     command.go!
     require_relative File.join(actual,'c','test_examplespreadsheet')
     Minitest.run.should == true
